# pubcrank

./: LICENSE  README.md
example-django/: .gitignore  manage.py  pyproject.toml
example-django/pubdir/: pubcrank.hjson
example-django/pubdir/content/: about.md  index.md
example-django/pubdir/content/blog/: index.md
example-django/pubdir/content/blog/2019/: 08-02-modern-day-groom-of-the-stool.md
example-django/pubdir/content/blog/2021/: 05-10-leaking-as-a-feature.md  07-06-android-privacy-protocol.md  12-28-streaming-setup.md
example-django/pubdir/content/blog/2022/: 08-09-weatherkit-python.md
example-django/pubdir/content/blog/2023/: 01-15-docker-compose-for-dev.md  01-31-graphql-in-python.md  06-04-parcel-and-vue-is-love.md  08-14-tmux-plugins-ubuntu.md  09-06-set-default-sound-ubuntu.md
example-django/pubdir/content/blog/2024/: 03-05-static-sites-on-fly.md  03-09-introducing-pubcrank.md  03-21-sqlite-hotness.md  10-26-sync-user-ids.md
example-django/pubdir/themes/plain/: _pagination.html  base.html  blog.html  page.html  post.hjson  post.html
example-django/pubdir/themes/plain/templates/: base.html  page.hjson  page.html
example-django/pubsite/: asgi.py  settings.py
example-site/: manage.py  pyproject.toml
example-site/pubex/: asgi.py  settings.py  urls.py  wsgi.py
example-site/pubsite/: wsgi.py
pubcrank/: pyproject.toml
pubcrank-app/: README.md  pyproject.toml
pubcrank-app/src/pubcrank/: bin.py  crank.py  pagination.py  settings.py
pubcrank-app/src/pubcrank/templatetags/: pubcrank.py
pubcrank-cli/: .gitignore  README.md  pubdir  pyproject.toml
pubcrank-cli/src/: pubcrank_manage.py
pubcrank-cli/src/django_proj/pubsite/: settings.py
pubcrank-cli/src/pubcrank_cli/: main.py
pubcrank/src/pubcrank/: bin.py  crank.py  settings.py
