[project]
name = "example-site"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = ["django>=5.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "BSD 3-Clause"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
pubcrank = "python ../pubcrank-app/src/pubcrank/bin.py"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../pubcrank-app#egg=pubcrank",
]
