[project]
name = "pubcrank-cli"
version = "0.1.0"
description = "PubCrank CMS CLI"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "BSD 3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
