[project]
name = "pubcrank"
version = "0.1.0"
description = "PubCrank CMS Django App"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "BSD 3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
